Update TASK1-IRIS FLOWERS CLASSIFICATION ML PROJECT.ipynb

--- a/TASK1-IRIS FLOWERS CLASSIFICATION ML PROJECT.ipynb
+++ b/TASK1-IRIS FLOWERS CLASSIFICATION ML PROJECT.ipynb
@@ -21,7 +21,7 @@
    "id": "84ca69b0",
    "metadata": {},
    "source": [
-    "#Author- Madhavi Vikas Ingale."
+    "#Author- PRIYANKA KIRAN JADHAV"
    ]
   },
   {
